--- a/css/common.css
+++ b/css/common.css
@@ -19,16 +19,12 @@ body {
   list-style: none;
   padding: 0;
   margin: 0;
-}
-
-.gallery-item {
-  flex-shrink: 0;
+  justify-content: center;
 }
 
 .gallery-image {
-  display: block;
-  width: 100%;
+  width: 300px;
   height: auto;
+  object-fit: cover;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
